arranged all the files in folders and accordingly changed the paths

--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hargun Fitness</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <!-- left box for logo -->
         <div class="left">
-            <img src="img/logo.png" alt="">
+            <img src="../img/logo.png" alt="">
             <div>Hargun Fitness</div>
         </div>
     
