--- a/html/about.html
+++ b/html/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Hargun Fitness</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
     <div class="left">
-        <img src="img/logo.png" alt="">
+        <img src="../img/logo.png" alt="">
         <div>Hargun Fitness</div>
     </div>
 
@@ -31,15 +31,15 @@
 </header>
 
 <div class="people">
-    <img src="img/gym-526995_640.jpg" id="img1">
+    <img src="../img/gym-526995_640.jpg" id="img1">
     <div id="caption1">
         We are the best gym in Mohali with all gym equipement and professional trainers
     </div>
 
-    <img src="img/man-1282232_640.jpg" id="img2">
+    <img src="../img/man-1282232_640.jpg" id="img2">
     <div id="caption2">Greg Systrom   Chief Instructor</div>
 
-    <img src="img/adult-1850925_640.jpg" id="img3">
+    <img src="../img/adult-1850925_640.jpg" id="img3">
     <div id="caption3">Sally Whales   Female Instructor</div>
 </div>
 
